Fix: rewrite of most of the HTML and CSS for the filterblock of ProfilePage Fix: alignment of the particulier-profiel block Fix: added MuseoSans_300.ttf to the public/fonts folder

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,13 @@
 
 @font-face {
   font-family: 'Museo Sans';
+  src: url('/fonts/MuseoSans_300.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
   src: url('/fonts/MuseoSans_500.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
